<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Animations</string>
    <string name="action_settings">Settings</string>
    <string name="text_btn_start">Start Animation</string>

    <!-- Display text -->
    <string name="txt_fadein">This is fade in animation</string>
    
    <!-- menu -->
    <string name="menu_favorite">Add to Favorites</string>
    <string name="menu_share">Share</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_showinapp">Show in app</string>
    <string name="menu_musicID">MusicID</string>

</resources>