
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    
        <RelativeLayout
        android:id="@+id/rl_men_pop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal" >

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/iv_minimise"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_weight="0.1"
                android:src="@drawable/com_facebook_tooltip_blue_bottomnub"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tv_songname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_weight="0.8"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/iv_menu_child"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_weight="0.1"
                android:src="@drawable/alert_menu_pop"
                android:layout_marginRight="3dp"
                android:paddingRight="3dp"
                android:visibility="invisible" />
        </LinearLayout>
    
    <RelativeLayout
        android:id="@+id/rl2"
        android:layout_below="@+id/ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
            
             
                
        <LinearLayout
            android:id="@+id/ll_fav"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:gravity="right"
                android:text="@string/menu_favorite"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_favorite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:src="@drawable/menu_favourite" />
            
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_share"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_fav"
            android:orientation="horizontal"
            android:layout_marginTop="3dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:gravity="right"
                android:text="@string/menu_share" 
                android:textColor="@android:color/white"
                android:textSize="15dp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/iv_share"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:src="@drawable/menu_share" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_feed"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_share"
            android:layout_marginTop="3dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:gravity="right"
                android:text="@string/menu_feedback"
                android:textColor="@android:color/white"
                android:textSize="15dp" 
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/iv_feedback"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:src="@drawable/menu_feedback" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_show"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_feed"
            android:layout_marginTop="3dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:gravity="right"
                android:text="@string/menu_showinapp"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_show"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:src="@drawable/menu_showinapp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_music"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_show"
            android:layout_marginTop="3dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:gravity="right"
                android:text="@string/menu_musicID"
                android:textColor="@android:color/white"
                android:textSize="15dp" 
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/iv_musicid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:src="@drawable/menu_musicid" />
        </LinearLayout>

        
    </RelativeLayout>  
    

    </RelativeLayout>
    
       <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:text="Start Animation"
        android:layout_alignParentBottom="true"/>
   

</RelativeLayout>
